[package]
name = "isbronsonhungry"
version = "0.1.0"
authors = ["Jake Bailey <rjacob.bailey@gmail.com>"]

[features]
# This allows us to use `#[cfg(unstable)]` to conditionalize the use of
# unstable Rust features from the nightly builds.  This is handy if we want
# to use, say, benchmaking from the `test` library when available.  Also,
# `travis-cargo` expects this to be here when building against the nightly
# version of Cargo.
unstable = []

[dependencies]
env_logger = "*"
iron = "0.4.0"
mount = "0.2.1"
openssl = "< 0.8"
postgres = { version = "0.11.10", features = ["openssl"] }
staticfile = "0.3.0"
