[package]
name = "isbronsonhungry"
version = "0.1.0"
authors = ["Jake Bailey <rjacob.bailey@gmail.com>"]

[features]
# This allows us to use `#[cfg(unstable)]` to conditionalize the use of
# unstable Rust features from the nightly builds.  This is handy if we want
# to use, say, benchmaking from the `test` library when available.  Also,
# `travis-cargo` expects this to be here when building against the nightly
# version of Cargo.
unstable = []

[dependencies]
chrono = { version = "0.2.25", features = ["serde"] }
env_logger = "0.3.4"
iron = "0.4.0"
lazy_static = "0.2.1"
mount = "0.2.1"
num_cpus = "1.0.0"
openssl = "< 0.8"
postgres = { version = "0.11.10", features = ["openssl", "chrono"] }
postgres-derive-macros = "0.1.3"
r2d2 = "0.7.0"
r2d2_postgres = "0.10.1"
serde = "0.8"
serde_json = "0.8"
serde_macros = "0.8"
staticfile = "0.3.0"
